--- a/index.html
+++ b/index.html
@@ -53,14 +53,17 @@
       <!-- One -->
       <section id="one" class="wrapper style2 spotlights">
         <section>
-          <a href="#" class="image"
-            ><img src="images/pic01.jpg" alt="" data-position="center center"
+          <a href="https://www.bigbenbooks.com.ar" class="image" target="_blank">
+            <img src="images/pic01.jpg" alt="" data-position="center center"
           /></a>
           <div class="content">
             <div class="inner">
               <h2>Big Ben Books Store</h2>
               <p>
-                Bla.
+                bigbenbooks.com.ar is a store where you will find English reading material and educational supplies, 
+                it is developed under Spanish language as a client requirement. It is basically designed with 2 sections,
+                the store, developed using WordPress and WooCommerce with a local (Argentine) payment system (Mercado Pago).
+                And the second section is an owner's introduction "Landing Page" using a modified Bootstrap template.
               </p>
               <ul class="actions">
                 <li><a href="https://www.bigbenbooks.com.ar" class="button" target="_blank">Visit!</a></li>
@@ -69,16 +72,16 @@
           </div>
         </section>
         <section>
-          <a href="#" class="image"
-            ><img src="images/pic02.jpg" alt="" data-position="top center"
+          <a href="https://www.tiendamujer.com.ar" class="image" target="_blank">
+            <img src="images/pic02.jpg" alt="" data-position="top center"
           /></a>
           <div class="content">
             <div class="inner">
               <h2>Tienda Mujer</h2>
               <p>
-                Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam
-                turpis mauris, eu ultricies erat malesuada quis. Aliquam
-                dapibus.
+                tiendamujer.com.ar is a women clothing store. Also developed under Spanish language with 
+                a landing page using a Boostrap modified template and the most important section, the store, it was
+                build using Wordpress and the WooCommerce plugin.
               </p>
               <ul class="actions">
                 <li><a href="https://www.tiendamujer.com.ar" class="button" target="_blank">Visit</a></li>
@@ -88,149 +91,46 @@
         </section>
       </section>
 
-      <!-- Two -->
-      <section id="two" class="wrapper style3 fade-up">
-        <div class="inner">
-          <h2>What we do</h2>
-          <p>
-            Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam
-            turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus,
-            lacus eget hendrerit bibendum, urna est aliquam sem, sit amet
-            imperdiet est velit quis lorem.
-          </p>
-          <div class="features">
-            <section>
-              <span class="icon solid major fa-code"></span>
-              <h3>Lorem ipsum amet</h3>
-              <p>
-                Phasellus convallis elit id ullam corper amet et pulvinar. Duis
-                aliquam turpis mauris, sed ultricies erat dapibus.
-              </p>
-            </section>
-            <section>
-              <span class="icon solid major fa-lock"></span>
-              <h3>Aliquam sed nullam</h3>
-              <p>
-                Phasellus convallis elit id ullam corper amet et pulvinar. Duis
-                aliquam turpis mauris, sed ultricies erat dapibus.
-              </p>
-            </section>
-            <section>
-              <span class="icon solid major fa-cog"></span>
-              <h3>Sed erat ullam corper</h3>
-              <p>
-                Phasellus convallis elit id ullam corper amet et pulvinar. Duis
-                aliquam turpis mauris, sed ultricies erat dapibus.
-              </p>
-            </section>
-            <section>
-              <span class="icon solid major fa-desktop"></span>
-              <h3>Veroeros quis lorem</h3>
-              <p>
-                Phasellus convallis elit id ullam corper amet et pulvinar. Duis
-                aliquam turpis mauris, sed ultricies erat dapibus.
-              </p>
-            </section>
-            <section>
-              <span class="icon solid major fa-link"></span>
-              <h3>Urna quis bibendum</h3>
-              <p>
-                Phasellus convallis elit id ullam corper amet et pulvinar. Duis
-                aliquam turpis mauris, sed ultricies erat dapibus.
-              </p>
-            </section>
-            <section>
-              <span class="icon major fa-gem"></span>
-              <h3>Aliquam urna dapibus</h3>
-              <p>
-                Phasellus convallis elit id ullam corper amet et pulvinar. Duis
-                aliquam turpis mauris, sed ultricies erat dapibus.
-              </p>
-            </section>
-          </div>
-          <ul class="actions">
-            <li><a href="generic.html" class="button">Learn more</a></li>
-          </ul>
-        </div>
-      </section>
-
       <!-- Three -->
-      <section id="three" class="wrapper style1 fade-up">
+      <section id="two" class="wrapper style1 fade-up">
         <div class="inner">
-          <h2>Get in touch</h2>
-          <p>
-            Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam
-            turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus,
-            lacus eget hendrerit bibendum, urna est aliquam sem, sit amet
-            imperdiet est velit quis lorem.
-          </p>
-          <div class="split style1">
+          <h2>Contact</h2>
+          <div class=" style1">
             <section>
-              <form method="post" action="#">
-                <div class="fields">
-                  <div class="field half">
-                    <label for="name">Name</label>
-                    <input type="text" name="name" id="name" />
-                  </div>
-                  <div class="field half">
-                    <label for="email">Email</label>
-                    <input type="text" name="email" id="email" />
-                  </div>
-                  <div class="field">
-                    <label for="message">Message</label>
-                    <textarea name="message" id="message" rows="5"></textarea>
-                  </div>
-                </div>
-                <ul class="actions">
-                  <li><a href="" class="button submit">Send Message</a></li>
-                </ul>
-              </form>
+              
             </section>
             <section>
               <ul class="contact">
                 <li>
                   <h3>Address</h3>
                   <span
-                    >12345 Somewhere Road #654<br />
-                    Nashville, TN 00000-0000<br />
-                    USA</span
+                    >14 Sarmiento st.<br />
+                    San Pedro de Jujuy - Jujuy<br />
+                    ARGENTINA</span
                   >
                 </li>
                 <li>
                   <h3>Email</h3>
-                  <a href="#">user@untitled.tld</a>
+                  <a href="mailto:brunogmoran@gmail.com">brunogmoran@gmail.com</a>
                 </li>
                 <li>
                   <h3>Phone</h3>
-                  <span>(000) 000-0000</span>
+                  <span>(54) 03888-426105</span>
+                </li>
+                <li>
+                  <h3>CellPhone</h3>
+                  <span>(549) 3888-585-686</span>
                 </li>
                 <li>
                   <h3>Social</h3>
                   <ul class="icons">
                     <li>
-                      <a href="#" class="icon brands fa-twitter"
-                        ><span class="label">Twitter</span></a
-                      >
+                      <a href="https://www.instagram.com/vrunomoran" class="icon brands fa-instagram" target="_blank"
+                        ><span class="label">Instagram</span></a>
                     </li>
                     <li>
-                      <a href="#" class="icon brands fa-facebook-f"
-                        ><span class="label">Facebook</span></a
-                      >
-                    </li>
-                    <li>
-                      <a href="#" class="icon brands fa-github"
-                        ><span class="label">GitHub</span></a
-                      >
-                    </li>
-                    <li>
-                      <a href="#" class="icon brands fa-instagram"
-                        ><span class="label">Instagram</span></a
-                      >
-                    </li>
-                    <li>
-                      <a href="#" class="icon brands fa-linkedin-in"
-                        ><span class="label">LinkedIn</span></a
-                      >
+                      <a href="https://www.linkedin.com/in/bruno-guillermo-moran" class="icon brands fa-linkedin-in" target="_blank"
+                        ><span class="label">LinkedIn</span></a>
                     </li>
                   </ul>
                 </li>
@@ -245,8 +145,7 @@
     <footer id="footer" class="wrapper style1-alt">
       <div class="inner">
         <ul class="menu">
-          <li>&copy; Untitled. All rights reserved.</li>
-          <li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+          <li>&copy; Bruno Guillermo Moran - 2020. All rights reserved.</li>
         </ul>
       </div>
     </footer>
